--- a/templates/about.html
+++ b/templates/about.html
@@ -13,26 +13,31 @@
                 solutions concrètes et opérationnelles pour mieux gérer la situation de crise entraînée par le Covid-19.
             </p>
             <p>
-                Les solutions sont réparties en quatre catégories :
+                Les solutions sont réparties en cinq catégories :
                 <ul>
                     <li>
-                        Des solutions
+                        des solutions
                         <a href="{{ url_for(".getpage", page="famille") }}">pour le grand public et les familles</a>,
-                        pour mieux gérer le quotidien.
+                        pour mieux gérer le quotidien,
                     </li>
                     <li>
-                        Des solutions
+                        des solutions
                         <a href="{{ url_for(".getpage", page="travail") }}">pour les entreprises et les salariés</a>,
-                        pour mieux s’adapter à un contexte professionnel de crise.
+                        pour mieux s’adapter à un contexte professionnel de crise,
                     </li>
                     <li>
-                        Des solutions
+                        des solutions
                         <a href="{{ url_for(".getpage", page="sante") }}">médicales à destination des malades</a>,
-                        ou de ceux qui craignent de l’être.
+                        ou de ceux qui craignent de l’être,
                     </li>
                     <li>
-                        Et des solutions à destination
-                        <a href="{{ url_for(".getpage", page="sante-pro") }}">des professionnels de santé</a>.
+                        des solutions à destination
+                        <a href="{{ url_for(".getpage", page="sante-pro") }}">des professionnels de santé</a>,
+                    </li>
+                    <li>
+                        et des solutions et conseils de
+                        <a href="{{ url_for(".getpage", page="securite") }}">sécurité</a>
+                        liés à l'usage du numérique en situation de crise.
                     </li>
                 </ul>
             </p>
