--- a/templates/_tracking.html
+++ b/templates/_tracking.html
@@ -17,7 +17,7 @@
 <!-- Matomo -->
 <script>
     let _paq = window._paq || [];
-    _paq.push(['requireConsent']);
+    // _paq.push(['requireConsent']);
     _paq.push(['alwaysUseSendBeacon']);
     _paq.push(['trackPageView']);
     _paq.push(['enableLinkTracking']);
