Tracking legal notice (WIP)

--- a/templates/_tracking.html
+++ b/templates/_tracking.html
@@ -2,6 +2,7 @@
 <div id="legal-notice" class="fixed-bottom text-white bg-secondary p-2" style="display: none">
     <div class="row">
         <div class="col-auto text-justify">
+            <i class="fas fa-info-circle"></i>
             Ce site internet utilise des cookies afin d'améliorer la qualité de la navigation et des contenus
             de <a class="text-white" href="https://covidsyntecnumerique.fr">covidsyntecnumerique.fr</a>
             en mesurant le trafic sur le site et en évaluant l'attrait de nos contenus.
@@ -27,16 +28,24 @@
         _paq.push(['setSiteId', '1']);
         let d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
         g.type = 'text/javascript'; g.async = true; g.defer = true; g.src = u + 'matomo.js'; s.parentNode.insertBefore(g, s);
+        // Legal notice
+        /*
+        _paq.push([function() {
+            if (document.cookie.match(/mtm_consent/))
+                $('#legal-notice').remove();
+            else $('#legal-notice').show();
+        }])
+        */
     })();
     function accept() {
-        _paq.push(['rememberConsentGiven']);
+        _paq.push(['rememberConsentGiven', 8760]);
         _paq.push(['setConsentGiven']);
-        $('#legal-notice').hide();
+        $('#legal-notice').remove();
     }
     function deny() {
-        _paq.push(['rememberConsentGiven']);
+        _paq.push(['rememberConsentGiven', 8760]);
         _paq.push(['forgetConsentGiven']);
-        $('#legal-notice').hide();
+        $('#legal-notice').remove();
     }
 </script>
 <!-- End Matomo Code -->
