New content for about/legal

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -68,7 +68,8 @@
             <div class="col text-center text-white bg-info py-2">
                 <span class="small">
                     Pour référencer votre offre, un tweet depuis votre compte entreprise à
-                    <a class="text-white" href="https://twitter.com/covidsyntecnum" target="_blank">@CovidSyntecNum</a> suffit.
+                    <a class="text-white" href="https://twitter.com/covidsyntecnum" target="_blank">@CovidSyntecNum</a>
+                    suffit. <a class="text-white" href="{{ url_for(".legal") }}#howto">En savoir plus.</a>
                 </span>
                 <br />
                 <span>
@@ -77,12 +78,10 @@
                         <img src="{{ url_for("static", filename="img/motherbase.svg") }}" width="150" alt="Motherbase">
                     </a>
                 </span>
-                <!--
                 <br />
                 <span class="small">
                     <a class="text-white" href="{{ url_for(".legal") }}">Mentions légales et cookies</a>
                 </span>
-                -->
             </div>
         </div>
     </footer>
