--- a/templates/legal.html
+++ b/templates/legal.html
@@ -13,6 +13,19 @@
                 <a href="https://motherbase.ai" target="_blank">Motherbase.ai</a>.
             </p>
             <p>
+                Le présent site est la propriété de Syntec Numérique, syndicat professionnel régi par le
+                Livre 1er du Code du travail, dont le siège social est situé 148 boulevard Haussmann, 75008 Paris –
+                tél. : <a href="tel:0033144304970">+33 (0)1 44 30 49 70</a>.
+            </p>
+            <p>
+                Le directeur de la publication du site internet est Godefroy de Bentzmann, Président de Syntec Numérique.
+            </p>
+            <p>
+                L’hébergement du site internet <a href="https://covidsyntecnumerique.fr">covidsyntecnumerique.fr</a>
+                est assuré par la société OVH Cloud dont le siège social est situé
+                2 rue Kellermann – 59100 Roubaix – France – tél. : <a href="tel:0033972101007">+33 (0)9 72 10 10 07</a>.
+            </p>
+            <p>
                 Ce site référence automatiquement les acteurs porteurs de solutions, qu’ils soient ou non membres
                 de Syntec Numérique. Il est mis à jour en continu.
             </p>
@@ -26,19 +39,26 @@
                 par ces entreprises. Syntec Numérique n’est pas impliqué dans votre processus de sélection de
                 prestataire et n’est en aucun cas prescripteur des entreprises référencées.
             </p>
-            <p>
-                Le présent site est la propriété de Syntec Numérique, syndicat professionnel régi par le
-                Livre 1er du Code du travail, dont le siège social est situé 148 boulevard Haussmann, 75008 Paris –
-                tél. : <a href="tel:0033144304970">+33 (0)1 44 30 49 70</a>.
-            </p>
-            <p>
-                Le directeur de la publication du site internet est Godefroy de Bentzmann, Président de Syntec Numérique.
-            </p>
-            <p>
-                L’hébergement du site internet <a href="https://covidsyntecnumerique.fr">covidsyntecnumerique.fr</a>
-                est assuré par la société OVH Cloud dont le siège social est situé
-                2 rue Kellermann – 59100 Roubaix – France.
-            </p>
+            <div id="howto" class="alert alert-info">
+                <p>
+                    <i class="fas fa-info-circle"></i>
+                    Si vous souhaitez proposer votre solution, rien de plus simple, il vous suffit d’envoyer un tweet à
+                    <a href="https://twitter.com/covidsyntecnum" target="_blank">@CovidSyntecNum</a>
+                    avec les éléments suivants :
+                </p>
+                <ol>
+                    <li>le nom de votre compte twitter,</li>
+                    <li>
+                        une rapide description de votre solution et en quoi elle peut aider dans la crise sanitaire actuelle,
+                    </li>
+                    <li>
+                        la catégorie, et le cas échéant la sous-catégorie, qui correspond à votre solution
+                        (1 seule possible) parmi :
+                        <br />
+                        #Famille #EntrepriseEtSalariés #Patients #ProfessionnelsDeSanté
+                    </li>
+                </ol>
+            </div>
         </div>
         <div class="col-lg text-justify">
             <h3>Utilisation des cookies</h3>
@@ -56,23 +76,38 @@
             <h5>Pourquoi avons-nous recours à des cookies ?</h5>
             <p>
                 Les cookies nous permettent notamment :
-                <ul>
-                    <li>d’améliorer la qualité de la navigation ;</li>
-                    <li>d’évaluer l’attrait des contenus publiés sur le site internet en vue de leur amélioration ;</li>
-                    <li>de mesurer le trafic sur le site internet. </li>
-                </ul>
-                <p>
-                    Vous trouverez ci-dessous la liste détaillée des cookies utilisés sur le site 
-                    <a href="https://covidsyntecnumerique.fr">covidsyntecnumerique.fr</a> :
-                </p>
-                <ul>
-                    <li>
-                        <strong>Tracking Matomo :</strong>
-                        permet de suivre l'activité de l'utilisateur sur le site à des fins statistiques
-                        et d'amélioration de l'expérience (conservation de 13 mois).
-                    </li>
-                </ul>
             </p>
+            <ul>
+                <li>d’améliorer la qualité de la navigation ;</li>
+                <li>d’évaluer l’attrait des contenus publiés sur le site internet en vue de leur amélioration ;</li>
+                <li>de mesurer le trafic sur le site internet.</li>
+            </ul>
+            <p>
+                Vous trouverez ci-dessous la liste détaillée des cookies utilisés sur le site 
+                <a href="https://covidsyntecnumerique.fr">covidsyntecnumerique.fr</a> :
+            </p>
+            <h6 class="text-center font-weight-bold">
+                Traceur de mesure d'audience
+            </h6>
+            <table class="table table-striped table-bordered text-left">
+                <thead class="text-center">
+                    <tr class="thead-dark">
+                        <th scope="col">Nom du cookie</th>
+                        <th scope="col">Finalité</th>
+                        <th scope="col">Durée de conservation</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td scope="row">Tracking Matomo</td>
+                        <td>
+                            Ce cookie permet de suivre l'activité de l'utilisateur sur le site à des fins
+                            statistiques et d'amélioration de l'expérience.
+                        </td>
+                        <td>13 mois</td>
+                    </tr>
+                </tbody>
+            </table>
             <h5>Paramétrage général des cookies</h5>
             <p>
                 <strong>Accepter les cookies</strong><br />
@@ -93,14 +128,14 @@
             <p>
                 Pour vous aider dans la configuration, vous pouvez consulter la page dédiée aux cookies du navigateur
                 que vous utilisez :
-                <ul>
-                    <li><a href="https://support.microsoft.com/fr-fr/help/4468242/microsoft-edge-browsing-data-and-privacy" target="_blank">Microsoft Edge</a></li>
-                    <li><a href="https://support.google.com/chrome/answer/95647?hl=fr&hlrm=fr" target="_blank">Google Chrome</a></li>
-                    <li><a href="https://support.mozilla.org/fr/kb/activer-desactiver-cookies-preferences?redirectlocale=fr&redirectslug=activer-desactiver-cookies" target="_blank">Mozilla Firefox</a></li>
-                    <li><a href="https://help.opera.com/en/latest/web-preferences/#cookies" target="_blank">Opera</a></li>
-                    <li><a href="https://support.apple.com/en-in/guide/safari/sfri11471/mac" target="_blank">Safari</a></li>
-                </ul>
             </p>
+            <ul>
+                <li><a href="https://support.microsoft.com/fr-fr/help/4468242/microsoft-edge-browsing-data-and-privacy" target="_blank">Microsoft Edge</a></li>
+                <li><a href="https://support.google.com/chrome/answer/95647?hl=fr&hlrm=fr" target="_blank">Google Chrome</a></li>
+                <li><a href="https://support.mozilla.org/fr/kb/activer-desactiver-cookies-preferences?redirectlocale=fr&redirectslug=activer-desactiver-cookies" target="_blank">Mozilla Firefox</a></li>
+                <li><a href="https://help.opera.com/en/latest/web-preferences/#cookies" target="_blank">Opera</a></li>
+                <li><a href="https://support.apple.com/en-in/guide/safari/sfri11471/mac" target="_blank">Safari</a></li>
+            </ul>
         </div>
     </div>
 {% endblock %}
