--- a/templates/about.html
+++ b/templates/about.html
@@ -46,27 +46,24 @@
                 Il s’appuie sur le sourcing (identification) automatique de solution
                 <a href="https://motherbase.ai/" target="_blank">Motherbase.ai</a>.
             </p>
-            <p>
+            <p class="small">
+                Ce site référence automatiquement les acteurs porteurs de solutions, qu’ils soient ou non membres de
+                Syntec Numérique, et qui ont effectué une démarche afin d’être référencés. Il est mis à jour en continu.
+                <br />
+                Le référencement est créé sur la base des éléments fournis par l’entreprise proposant sa solution.
+                Il n’est pas exhaustif.
+                <br />
+                Syntec Numérique ne vérifie ni ne garantit la qualité des solutions des entreprises et ne peut en aucun
+                cas voir sa responsabilité engagée au titre des prestations proposées par ces entreprises.
+                <br />
+                Syntec Numérique n’est pas impliqué dans votre processus de sélection de prestataire et n’est en aucun
+                cas prescripteur des entreprises référencées.
+            </p>
+            <p class="small">
                 Si vous souhaitez proposer votre solution, rien de plus simple, il vous suffit d’envoyer un tweet à
                 <a href="https://twitter.com/covidsyntecnum" target="_blank">@CovidSyntecNum</a>
                 décrivant votre offre depuis le compte de votre entreprise.
-            </p>
-            <p class="small">
-                Ce site référence automatiquement les acteurs porteurs de solutions, qu’ils soient ou non membres
-                de Syntec Numérique. Il est mis à jour en continu.<br />
-                Le référencement est créé sur la base des éléments fournis par l’entreprise proposant sa solution.
-                Il n’est pas exhaustif.<br />
-                Syntec Numérique ne vérifie ni ne garantit la qualité des solutions des
-                entreprises et ne peut en aucun cas voir sa responsabilité engagée au titre des prestations proposées
-                par ces entreprises. Syntec Numérique n’est pas impliqué dans votre processus de sélection de
-                prestataire et n’est en aucun cas prescripteur des entreprises référencées.
-            </p>
-            <p class="small text-muted">
-                Nous utilisons des cookies internes de type « Matomo (Piwik) ». Leur finalité est d'améliorer la
-                qualité de la navigation et des contenus de covidsyntecnumerique.fr en mesurant le trafic sur le site
-                et en évaluant l'attrait de nos contenus. Les données statistiques sont hébergées en France et
-                respectent les règles du RGPD. Ces cookies peuvent être désactivés en positionnant l'option
-                « Ne pas me pister » de votre navigateur.
+                <a href="{{ url_for(".legal") }}#howto">En savoir plus.</a>
             </p>
         </div>
     </div>
