Change legal notice text

--- a/templates/_tracking.html
+++ b/templates/_tracking.html
@@ -3,9 +3,9 @@
     <div class="row">
         <div class="col-auto text-justify">
             <i class="fas fa-info-circle"></i>
-            Ce site internet utilise des cookies afin d'améliorer la qualité de la navigation et des contenus
-            de <a class="text-white" href="https://covidsyntecnumerique.fr">covidsyntecnumerique.fr</a>
-            en mesurant le trafic sur le site et en évaluant l'attrait de nos contenus.
+            Ce site internet utilise des cookies afin d’améliorer la qualité de la navigation,
+            d’évaluer et d’améliorer les contenus et de mesurer le trafic du site
+            <a class="text-white" href="https://covidsyntecnumerique.fr">covidsyntecnumerique.fr</a>.
             <a class="text-white" href="{{ url_for(".legal") }}">Cliquez ici pour en savoir plus.</a>
         </div>
         <div class="col text-center">
