--- a/templates/legal.html
+++ b/templates/legal.html
@@ -39,7 +39,7 @@
                 par ces entreprises. Syntec Numérique n’est pas impliqué dans votre processus de sélection de
                 prestataire et n’est en aucun cas prescripteur des entreprises référencées.
             </p>
-            <div id="howto" class="alert alert-info">
+            <div id="howto" class="alert alert-primary">
                 <p>
                     <i class="fas fa-info-circle"></i>
                     Si vous souhaitez proposer votre solution, rien de plus simple, il vous suffit d’envoyer un tweet à
