Banner and logo

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="section jumbotron row">
         <div class="col-lg-auto text-center">
-            <img class="img-fluid mb-3"
+            <img class="img-fluid mb-3 d-none d-md-block"
                  src="{{ url_for("static", filename="img/placeholder.png") }}"
                  style="max-height: 300px">
         </div>
