--- a/templates/_base.html
+++ b/templates/_base.html
@@ -45,7 +45,10 @@
         <div class="row flex-nowrap justify-content-between align-items-center">
             <div class="col text-center py-3">
                 <a href="{{ url_for(".about") }}">
-                    <img src="{{ url_for("static", filename="img/logo.png") }}" height="100" alt="Syntec Numérique">
+                    <img src="{{ url_for("static", filename="img/logo.png") }}"
+                         class="d-lg-none" height="100" alt="Syntec Numérique">
+                    <img src="{{ url_for("static", filename="img/banner.png") }}"
+                         class="d-none d-lg-inline" height="150" alt="Syntec Numérique">
                 </a>
             </div>
         </div>
