--- a/templates/_base.html
+++ b/templates/_base.html
@@ -43,7 +43,7 @@
 <body class="d-flex flex-column h-100">
     <header class="header">
         <div class="row flex-nowrap justify-content-between align-items-center">
-            <div class="col text-center py-3">
+            <div class="col text-center">
                 <a href="{{ url_for(".about") }}">
                     <img src="{{ url_for("static", filename="img/logo.png") }}"
                          class="d-lg-none" height="100" alt="Syntec Numérique">
