--- a/templates/_base.html
+++ b/templates/_base.html
@@ -46,7 +46,7 @@
             <div class="col text-center">
                 <a href="{{ url_for(".about") }}">
                     <img src="{{ url_for("static", filename="img/logo.png") }}"
-                         class="d-lg-none" height="100" alt="Syntec Numérique">
+                         class="d-lg-none img-fluid" alt="Syntec Numérique">
                     <img src="{{ url_for("static", filename="img/banner.png") }}"
                          class="d-none d-lg-inline" height="150" alt="Syntec Numérique">
                 </a>
