--- a/templates/_base.html
+++ b/templates/_base.html
@@ -45,10 +45,8 @@
         <div class="row flex-nowrap justify-content-between align-items-center">
             <div class="col text-center">
                 <a href="{{ url_for(".about") }}">
-                    <img src="{{ url_for("static", filename="img/logo.png") }}"
-                         class="d-lg-none img-fluid" alt="Syntec Numérique">
                     <img src="{{ url_for("static", filename="img/banner.png") }}"
-                         class="d-none d-lg-inline" height="150" alt="Syntec Numérique">
+                         class="img-fluid" alt="Syntec Numérique">
                 </a>
             </div>
         </div>
