--- a/templates/_tracking.html
+++ b/templates/_tracking.html
@@ -16,7 +16,7 @@
     _paq.push(['trackPageView']);
     _paq.push(['enableLinkTracking']);
     (function () {
-        let u = "https://stats.covidsyntecnumerique.fr/";
+        let u = "https://stats.uchange.co/";
         _paq.push(['setTrackerUrl', u + 'matomo.php']);
         _paq.push(['setSiteId', '1']);
         let d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
